Issue #3186992 by hinal05, djsagar, kiran.kadam911, hitvika_verma, tushar_sachdeva, chetanbharambe, ranjith_kumar_k_u, bnjmnm, BhumikaVarshney, Sakthivel M, Abhijith S, babusaheb.vikas, lauriii: Nav menu items can overflow outside of container
(cherry picked from commit 4063e76cbe99607621b2a4b22ee75076a1ff72ec)

--- a/core/themes/olivero/css/components/navigation/nav-primary-wide.pcss.css
+++ b/core/themes/olivero/css/components/navigation/nav-primary-wide.pcss.css
@@ -82,7 +82,7 @@ body:not(.is-always-mobile-nav) {
     }
 
     & .primary-nav__menu-link-inner {
-      padding-block: var(--sp2);
+      padding-block: var(--sp1);
       padding-inline-start: 0;
       padding-inline-end: 0;
 
