--- a/core/themes/olivero/css/components/navigation/nav-primary.css
+++ b/core/themes/olivero/css/components/navigation/nav-primary.css
@@ -11,6 +11,7 @@
  */
 
 .primary-nav__menu {
+  flex-wrap: wrap;
   list-style: none;
 }
 
